Fix z-index issue on content blocks

--- a/src/components/blocks/content/content.module.scss
+++ b/src/components/blocks/content/content.module.scss
@@ -19,4 +19,7 @@
         z-index: 1;
         filter: grayscale(1) opacity(0.2);
     }
+    .content {
+        z-index: 2;
+    }
 }
